--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,29 +1,34 @@
 .idinput {
-    width: 60%;
-    height: 100%;
-    border: 0;
-    outline: 0;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-    color: #fff;
-    background-color: #000;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
+  width: 50%;
+  height: 100%;
+  border: 0;
+  outline: 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  /* text-align: center; */
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #335d92;
+  border-radius: 0.2rem 0rem 0rem 0.2rem;
+  padding: 0.5rem;
 }
 
 /* A large button positioned under the text input in a light blue color */
 .submit {
-    width: 60%;
-    height: 100%;
-    border: 0;
-    outline: 0;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-    color: #fff;
-    background-color: #335d92;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    margin-top: 2rem;
+  height: 100%;
+  width: 10em;
+  border: 0;
+  outline: 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
+  background-color: #335d92;
+  border-radius: 0rem 0.2rem 0.2rem 0rem;
+  padding: 0.5rem;
+  border: 1px solid #335d92;
+}
+
+.spinner {
+  filter: invert(1);
 }
