--- a/src/root.css
+++ b/src/root.css
@@ -1,7 +1,7 @@
 body {
-  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #2b2b2b;
+  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  background-color: #222969ff;
 }
 
 a {
@@ -16,10 +16,16 @@ main {
   text-align: center;
   padding: 1em;
   margin: 0 auto;
+  width: 50em;
+  display: flexbox;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
-  color: #335d92;
+  background: -webkit-linear-gradient(#335d92, #4133c5ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 500;
@@ -30,7 +36,6 @@ h1 {
 
 p {
   max-width: 14rem;
-  margin: 2rem auto;
   line-height: 1.35;
 }
 
